# bip-slaskie

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: pre-commit.json
.github/workflows/: mypy.yml  scrape.yml
docs/: cities-top10.md
docs/SubAgent docs/: chorzow-bip-spec.md
src/bip_scraper/: __init__.py  cli.py  config.py  diff.py  models.py  notify.py  reporting.py  snapshot.py
src/bip_scraper/cities/: __init__.py  base.py  bytom.py  chorzow.py  dabrowa_gornicza.py  gliwice.py  katowice.py  rudaslaska.py  rybnik.py  siemianowice.py  sosnowiec.py  swietochlowice.py  tychy.py  zabrze.py
tests/: test_bytom.py  test_chorzow.py  test_dabrowa_gornicza.py  test_diff.py  test_gliwice.py  test_katowice.py  test_reporting.py  test_rudaslaska.py  test_rybnik.py  test_siemianowice.py  test_sosnowiec.py  test_swietochlowice.py  test_tychy.py  test_zabrze.py
tests/fixtures/: bytom_acts.html  bytom_kadencja.html  bytom_year.html  chorzow_acts.html  chorzow_sessions.html  dabrowa_gornicza_acts.html  gliwice_acts.html  gliwice_acts_last_page.html  katowice_acts.html  katowice_sessions.html  rudaslaska_root.html  rudaslaska_session.html  rudaslaska_year.html  rybnik_acts.html  siemianowice_acts.html  sosnowiec_articles.json  sosnowiec_menu.json  swietochlowice_acts.html  tychy_acts.html  tychy_index.html  zabrze_api.json  zabrze_page_2025.html
