[project]
name = "bip-slaskie"
version = "0.1.0"
description = "Daily BIP legal-act scraper and diff reporter for selected Silesian cities"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "httpx>=0.27.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pylint>=3.3.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "tombi>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bip_scraper"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true

[tool.pylint.main]
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
